# python-course

./: LICENSE
hw2/: docker-compose.yml
hw2/artifacts/1/: example.tex  test_main.py
hw2/artifacts/2/: project_link.txt
hw2/artifacts/3/: Dockerfile
hw2/example_latex_generator/: pyproject.toml
hw2/example_latex_generator/example_latex_generator/: main.py
hw3/artifacts/2/: matrix_matmul.txt  matrix_mul.txt
hw3/artifacts/3/: C.txt  CD.txt  hash.txt
hw3/sol/: main.py  matrix_lib.py  numpy_matrix.py
hw4/artifacts/: 1.txt  2.txt  3.txt
hw4/sol/: main.py  task1.py  task2.py  task3.py
