[project]
name = "example-latex-generator"
version = "0.1.0"
description = "Example of generating LaTeX documents"
authors = [
    {name = "Ilia Anikeev",email = "ilia.anikeev@gmail.com"}
]
license = {text = "mit"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "latex-generator-lib (>=0.1.0,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
